desert frontend done

--- a/Desert_Order/src/components/Layout/HeaderCartButton.module.css
+++ b/Desert_Order/src/components/Layout/HeaderCartButton.module.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 .button {
     cursor: pointer;
     font: inherit;
     border: none;
-    background-color: #4d1601;
+    background-color: #b56576;
     color: white;
     padding: 0.75rem 3rem;
     display: flex;
@@ -11,10 +12,9 @@
     border-radius: 25px;
     font-weight: bold;
   }
-  
   .button:hover,
   .button:active {
-    background-color: #2c0d00;
+    background-color: #7e4c57;
   }
   
   .icon {
@@ -24,7 +24,7 @@
   }
   
   .badge {
-    background-color: #b94517;
+    background-color: #355070;
     padding: 0.25rem 1rem;
     border-radius: 25px;
     margin-left: 1rem;
