--- a/Desert_Order/src/components/Cart/Cart.module.css
+++ b/Desert_Order/src/components/Cart/Cart.module.css
@@ -23,7 +23,7 @@
     font: inherit;
     cursor: pointer;
     background-color: transparent;
-    border: 1px solid #8a2b06;
+    border: 1px solid #355070;
     padding: 0.5rem 2rem;
     border-radius: 25px;
     margin-left: 1rem;
@@ -31,16 +31,16 @@
   
   .actions button:hover,
   .actions button:active {
-    background-color: #5a1a01;
-    border-color: #5a1a01;
+    background-color: #466894;
+    border-color: #466894;
     color: white;
   }
   
   .actions .button--alt {
-    color: #8a2b06;
+    color: #355070;
   }
   
   .actions .button {
-    background-color: #8a2b06;
+    background-color: #355070;
     color: white;
   }
