--- a/Desert_Order/src/components/Layout/Header.module.css
+++ b/Desert_Order/src/components/Layout/Header.module.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
 .header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 5rem;
-    background-color: #8a2b06;
+    background-color: #eaac8b;
     color: white;
     display: flex;
     justify-content: space-between;
