--- a/Desert_Order/src/index.css
+++ b/Desert_Order/src/index.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Noto Sans JP', sans-serif;
+  /* font-family: 'Noto Sans JP', sans-serif; */
+  font-family: 'Comfortaa', cursive;
 }
 
 body {
   margin: 0;
-  background-color: #3f3f3f;
+  background-color: #6d597a;
 }
 
