--- a/Desert_Order/src/components/Layout/HeaderCartButton.module.css
+++ b/Desert_Order/src/components/Layout/HeaderCartButton.module.css
@@ -57,3 +57,10 @@
       transform: scale(1);
     }
   }
+  @media only screen and (max-width: 700px)
+  {
+    .button
+    {
+      width: 150px;
+    }
+  }
