changed loader color

--- a/Desert_Order/src/components/Meals/Loader.css
+++ b/Desert_Order/src/components/Meals/Loader.css
@@ -6,8 +6,8 @@
    
    circle {
     fill: none;
-    stroke: hsl(214, 97%, 59%);
-    stroke-width: 2;
+    stroke: #e56b6f;
+    stroke-width: 4;
     stroke-dasharray: 1, 200;
     stroke-dashoffset: 0;
     stroke-linecap: round;
